<resources>
    <string name="app_name">TrackMyFunds</string>
    <string name="welcome_to_myapp">Welcome to MyApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_in">Sign In</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>