<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signuptitle"
            android:text="@string/sign_up"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:gravity="center"
            android:layout_margin="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@id/signuptitle"
            android:background="#30ffffff"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:drawableLeft="@drawable/ic_baseline_person_pin_24"
            android:drawablePadding="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_below="@id/username"
            android:background="#30ffffff"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:drawableLeft="@drawable/ic_baseline_mark_email_unread_24"
            android:drawablePadding="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:background="#30ffffff"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:drawableLeft="@drawable/ic_baseline_password_24"
            android:drawablePadding="20sp"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repassword"
            android:layout_below="@id/password"
            android:background="#30ffffff"
            android:hint="@string/re_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:drawableLeft="@drawable/ic_baseline_password_24"
            android:drawablePadding="20sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="150dp"
            android:layout_height="75sp"
            android:layout_below="@id/repassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:background="@color/olivegreen"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="1000px"
            android:id="@+id/renderlogin"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupbutton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="11dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="Already a User? Login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


</RelativeLayout>