<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signuptitle"
        android:text="@string/sign_in"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:gravity="center"
        android:layout_marginTop="80dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/signuptitle"
        android:background="@color/olivegreen"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"

        android:padding="20sp"
        android:layout_marginTop="120sp"
        android:drawableLeft="@drawable/ic_baseline_mark_email_unread_24"
        android:drawablePadding="20sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10sp"
        android:background="@color/olivegreen"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/loginbutton"
        android:layout_width="200dp"
        android:layout_height="50sp"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="60sp"
        android:background="@color/olivegreen"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/renderregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Not Yet Registered? Register"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic" />





</RelativeLayout>

